src/test/deca/syntax/invalid/resultats/test38_decl_method-lex.res
'class': [@0,332:336='class',<7>,15:0]
IDENT: [@1,338:338='A',<26>,15:6]
'{': [@2,340:340='{',<36>,15:8]
IDENT: [@3,343:345='fct',<26>,16:1]
'(': [@4,346:346='(',<34>,16:4]
')': [@5,347:347=')',<35>,16:5]
'{': [@6,348:348='{',<36>,16:6]
'}': [@7,349:349='}',<37>,16:7]
'}': [@8,351:351='}',<37>,17:0]
